set working-directory

--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ["develop"]
 
+defaults:
+  run:
+    working-directory: ./application/sample_csharp
+
 jobs:
   analyze:
     name: Analyze
