--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -48,8 +48,8 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          echo $APPLICATIONDOCKERIMAGE
-          docker build -t $APPLICATIONDOCKERIMAGE .
+          echo "$APPLICATIONDOCKERIMAGE"
+          docker build -t "$APPLICATIONDOCKERIMAGE" .
 
       - name: Log in to Docker Hub or your container registry
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
