--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -9,39 +9,40 @@ defaults:
     working-directory: ./application/sample_csharp
 
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
+  # analyze:
+  #   name: Analyze
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ["csharp"]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       language: ["csharp"]
 
-    steps:
-      - name: Check Current Directory
-        run: |
-          pwd
+  #   steps:
+  #     - name: Check Current Directory
+  #       run: |
+  #         pwd
 
-      - name: Checkout repository
-        uses: actions/checkout@v3
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: ${{ matrix.language }}
+  #     - name: Initialize CodeQL
+  #       uses: github/codeql-action/init@v2
+  #       with:
+  #         languages: ${{ matrix.language }}
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
+  #     - name: Autobuild
+  #       uses: github/codeql-action/autobuild@v2
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{matrix.language}}"
+  #     - name: Perform CodeQL Analysis
+  #       uses: github/codeql-action/analyze@v2
+  #       with:
+  #         category: "/language:${{matrix.language}}"
 
   Containerize:
     name: Build & Push
     runs-on: ubuntu-latest
+    environment: develop
 
     steps:
       - uses: actions/checkout@v3
@@ -51,11 +52,11 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          echo $APP_IMAGE
-          docker build -t $APP_IMAGE .
+          echo ${{ vars.APP_IMAGE }}
+          docker build -t ${{ vars.APP_IMAGE }}.
 
       - name: Log in to Docker Hub or your container registry
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push the Docker image
-        run: docker push $APP_IMAGE
+        run: docker push ${{ vars.APP_IMAGE }}
