--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -1,4 +1,4 @@
-name: "CodeQL"
+name: "CodeQL and Docker"
 
 on:
   push:
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   analyze:
-    name: Analyze
+    name: Analyze CodeQL
     runs-on: ubuntu-latest
     permissions:
       actions: read
@@ -40,12 +40,28 @@ jobs:
         with:
           category: "/language:${{matrix.language}}"
 
+      - name: Save CodeQL results
+        uses: actions/upload-artifact@v2
+        with:
+          name: codeql-results
+          path: ./codeql-results
+
+  containerize:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+
+    needs: analyze
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+          docker build . --file Dockerfile --tag ${{ env.APP_IMAGE }}:$GITHUB_SHA
 
       - name: Log in to Docker Hub or your container registry
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push the Docker image
-        run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+        run: docker push ${{ env.APP_IMAGE }}:$GITHUB_SHA
