--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -92,9 +92,13 @@ jobs:
           mkdir -p $HOME/.kube
           mv kubeconfig $HOME/.kube/config
 
+      - name: Debug kubeconfig
+        run: cat $HOME/.kube/config
+
       - name: Set KUBE_CONTEXT
         run: echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
 
       - name: Deploy to Kubernetes
         run: |
+          kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
           kubectl apply -f .
