use environment develop

--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -69,6 +69,7 @@ jobs:
   deploy-to-k8s:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
+    environment: develop
 
     needs: containerize
 
