--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -103,6 +103,11 @@ jobs:
           yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
           kubectl apply -f deployment.yaml
 
+      - name: Set up Git
+        run: |
+          git config --global user.email "ratchanon.unnu1993@gmail.com"
+          git config --global user.name "zaserzafear"
+
       - name: Update Manifest To Git
         run: |
           git add deployment.yaml
