--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -103,6 +103,7 @@ jobs:
           echo "${{ secrets.ACTION_BOT_SSH }}" > id_rsa
           mkdir -p $HOME/.ssh
           mv id_rsa $HOME/.ssh/id_rsa
+          chmod 600 $HOME/.ssh/id_rsa
 
           git config --global user.email "ratchanon.unnu1993@gmail.com"
           git config --global user.name "zaserzafear"
