--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -90,13 +90,13 @@ jobs:
       - name: Set KUBE_CONTEXT
         run: |
           echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
-          kubectl config use-context "${{ secrets.KUBE_CONTEXT }}" --namespace=${{ vars.KUBE_NAMESPACE }}
+          kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
 
       - name: Update Deployment to k8s
         run: |
           export APP_IMAGE_URL=${{ vars.APP_IMAGE }}:${{ github.sha }}
           yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
-          kubectl apply -f deployment.yaml
+          kubectl apply -f deployment.yaml -n ${{ vars.KUBE_NAMESPACE }}
 
       - name: Commit and push changes
         run: |
