--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -10,10 +10,6 @@ jobs:
     name: Retag Container Image
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ./manifest/dev
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,6 +18,8 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Retag Container Image
+        id: retag
+        working-directory: ./manifest/dev
         run: |
           IMAGE_SOURCE=$(yq eval '.spec.template.spec.containers[0].image' deployment.yaml)
           docker pull $IMAGE_SOURCE
@@ -30,40 +28,30 @@ jobs:
           docker tag $IMAGE_SOURCE $IMAGE_DEST
           docker push $IMAGE_DEST
 
-  # deploy-to-production:
-  #   name: Deploy to Kubernetes
-  #   runs-on: ubuntu-latest
-  #   environment: production
+      - name: Set up Kube Config
+        run: |
+          echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
+          mkdir -p $HOME/.kube
+          mv kubeconfig $HOME/.kube/config
 
-  #   defaults:
-  #     run:
-  #       working-directory: ./manifest/prod
+      - name: Set KUBE_CONTEXT
+        run: |
+          echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
+          kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+      - name: Update Deployment to k8s
+        working-directory: ./manifest/prod
+        env:
+          IMAGE_TOCHANGE: ${{ steps.retag.outputs.IMAGE_DEST }}
+        run: |
+          yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
+          kubectl apply -f deployment.yaml -n ${{ vars.KUBE_NAMESPACE }}
 
-  #     - name: Set up Kube Config
-  #       run: |
-  #         echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
-  #         mkdir -p $HOME/.kube
-  #         mv kubeconfig $HOME/.kube/config
-
-  #     - name: Set KUBE_CONTEXT
-  #       run: |
-  #         echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
-  #         kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
-
-  #     - name: Update Deployment to k8s
-  #       run: |
-  #         export APP_IMAGE_URL=${{ vars.APP_IMAGE }}:${{ github.sha }}
-  #         yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
-  #         kubectl apply -f deployment.yaml -n ${{ vars.KUBE_NAMESPACE }}
-
-  #     - name: Commit and push changes
-  #       run: |
-  #         git config --local user.email "actions@github.com"
-  #         git config --local user.name "GitHub Actions"
-  #         git add deployment.yaml
-  #         git commit -m "bot: update deployment ${{ github.sha }}"
-  #         git push
+      - name: Commit and push changes
+        working-directory: ./manifest/prod
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add deployment.yaml
+          git commit -m "bot: update deployment ${{ github.sha }}"
+          git push
