fix: environment: production

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -9,6 +9,7 @@ jobs:
   retag-container:
     name: Retag Container Image
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
       - name: Checkout repository
