--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
+    outputs:
+      IMAGE_DEST: ${{ steps.retag.outputs.IMAGE_DEST }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -28,6 +31,8 @@ jobs:
           IMAGE_DEST=${{ vars.APP_IMAGE }}:$GITHUB_RUN_NUMBER
           docker tag $IMAGE_SOURCE $IMAGE_DEST
           docker push $IMAGE_DEST
+          
+          echo "::set-output name=IMAGE_DEST::$IMAGE_DEST"
 
       - name: Set up Kube Config
         run: |
