--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -10,47 +10,47 @@ defaults:
     working-directory: ./application/sample_csharp
 
 jobs:
-  # analyze:
-  #   name: Analyze CodeQL
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     actions: read
-  #     contents: read
-  #     security-events: write
+  analyze:
+    name: Analyze CodeQL
+    runs-on: github-selfhost
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       language: ["csharp"]
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["csharp"]
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Initialize CodeQL
-  #       uses: github/codeql-action/init@v2
-  #       with:
-  #         languages: ${{ matrix.language }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
 
-  #     - name: Autobuild
-  #       uses: github/codeql-action/autobuild@v2
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
 
-  #     - name: Perform CodeQL Analysis
-  #       uses: github/codeql-action/analyze@v2
-  #       with:
-  #         category: "/language:${{matrix.language}}"
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
 
-  #     - name: Save CodeQL results
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: codeql-results
-  #         path: ./codeql-results
+      - name: Save CodeQL results
+        uses: actions/upload-artifact@v2
+        with:
+          name: codeql-results
+          path: ./codeql-results
 
   containerize:
     name: Build & Push Docker Image
-    runs-on: ubuntu-latest
+    runs-on: github-selfhost
 
-    # needs: analyze
+    needs: analyze
 
     steps:
       - name: Checkout repository
@@ -68,7 +68,7 @@ jobs:
 
   deploy-to-develop:
     name: Deploy to Kubernetes
-    runs-on: ubuntu-latest
+    runs-on: github-selfhost
     environment: develop
 
     needs: containerize
