--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -104,4 +104,4 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
           git commit -m "bot: update deployment ${{ github.sha }}"
-          git push
+          git push origin develop
