--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -31,7 +31,7 @@ jobs:
           IMAGE_DEST=${{ vars.APP_IMAGE }}:$GITHUB_RUN_NUMBER
           docker tag $IMAGE_SOURCE $IMAGE_DEST
           docker push $IMAGE_DEST
-          
+
           echo "::set-output name=IMAGE_DEST::$IMAGE_DEST"
 
       - name: Set up Kube Config
@@ -42,7 +42,7 @@ jobs:
 
       - name: Set KUBE_CONTEXT
         run: |
-          echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
+          # echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
           kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
 
       - name: Update Deployment to k8s
