fix: docker warning [skip ci]

--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -63,7 +63,7 @@ jobs:
           docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
 
       - name: Log in to Docker Hub or your container registry
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Push the Docker image
         run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
