--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -11,9 +11,6 @@ jobs:
     runs-on: self-hosted
     environment: production
 
-    outputs:
-      IMAGE_RETAG: ${{ steps.retag.outputs.IMAGE_DEST }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -28,12 +25,18 @@ jobs:
           IMAGE_SOURCE=$(yq eval '.spec.template.spec.containers[0].image' deployment.yaml)
           docker pull $IMAGE_SOURCE
 
-          IMAGE_TOCHANGE=${{ vars.APP_IMAGE }}:$GITHUB_RUN_NUMBER
+          IMAGE_TOCHANGE=${{ secrets.APP_IMAGE }}:$GITHUB_RUN_NUMBER
           docker tag $IMAGE_SOURCE $IMAGE_TOCHANGE
           docker push $IMAGE_TOCHANGE
 
-          echo "::set-output name=IMAGE_DEST::$IMAGE_TOCHANGE" >> $GITHUB_ENV
+          echo "IMAGE_TOCHANGE=$IMAGE_TOCHANGE" >> $GITHUB_ENV
 
+  deploy-production:
+    needs: retag-container
+    runs-on: self-hosted
+    environment: production
+
+    steps:
       - name: Set up Kube Config
         run: |
           echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
@@ -46,12 +49,11 @@ jobs:
 
       - name: Update Deployment to k8s
         working-directory: ./manifest/prod
-        env:
-          IMAGE_TOCHANGE: ${{ steps.retag.outputs.IMAGE_RETAG }}
         run: |
+          IMAGE_TOCHANGE=$IMAGE_TOCHANGE
           echo "$IMAGE_TOCHANGE"
           yq -i '.spec.template.spec.containers[0].image = strenv(IMAGE_TOCHANGE)' deployment.yaml
-          kubectl apply -f deployment.yaml -n ${{ vars.KUBE_NAMESPACE }}
+          kubectl apply -f deployment.yaml -n ${{ secrets.KUBE_NAMESPACE }}
 
       - name: Commit and push changes
         working-directory: ./manifest/prod
@@ -59,6 +61,6 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
-          git commit -m "bot: update deployment ${{ steps.retag.outputs.IMAGE_RETAG }}"
+          git commit -m "bot: update deployment $IMAGE_TOCHANGE"
           git checkout -b main
           git push
