--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -95,7 +95,7 @@ jobs:
         run: |
           export APP_IMAGE_URL=${{ vars.APP_IMAGE }}:${{ github.sha }}
           yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
-          kubectl apply -f deployment.yaml -n ${{ vars.KUBE_NAMESPACE }}
+          kubectl apply -f deployment.yaml -n ${{ secrets.KUBE_NAMESPACE }}
 
       - name: Commit and push changes
         run: |
