--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -66,7 +66,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Push the Docker image
-        run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+        run: docker push ${{ secrets.APP_IMAGE }}:$GITHUB_SHA
 
   deploy-to-develop:
     needs: containerize
