--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Build the Docker image
         working-directory: ./application/sample_csharp
         run: |
-          docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+          docker build . --file Dockerfile --tag ${{ secrets.APP_IMAGE }}:$GITHUB_SHA
 
       - name: Log in to Docker Hub or your container registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
