--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -38,6 +38,9 @@ jobs:
 
           docker tag $IMAGE_SOURCE $IMAGE_TOCHANGE
           docker push $IMAGE_TOCHANGE
+      - name: Debug - Print IMAGE_TOCHANGE in retag-container
+        run: |
+          echo "DEBUG: IMAGE_TOCHANGE=${{ needs.retag-container.outputs.IMAGE_TOCHANGE }}"
 
   deploy-production:
     needs: retag-container
@@ -57,6 +60,10 @@ jobs:
       - name: Set KUBE_CONTEXT
         run: |
           kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
+
+      - name: Debug - Print IMAGE_TOCHANGE in deploy-production
+        run: |
+          echo "DEBUG: IMAGE_TOCHANGE=${{ env.IMAGE_TOCHANGE }}"
 
       - name: Update Deployment to k8s
         working-directory: ./manifest/prod
