--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -6,18 +6,11 @@ on:
       - main
   workflow_dispatch:
 
-# on:
-#   pull_request:
-#     branches:
-#       - main
 jobs:
   retag-container:
     name: Retag Container Image
     runs-on: self-hosted
     environment: production
-
-    # outputs:
-    #   IMAGE_TOCHANGE: ${{ steps.retag.outputs.IMAGE_TOCHANGE }}
 
     steps:
       - name: Checkout repository
@@ -38,10 +31,9 @@ jobs:
           docker tag $IMAGE_SOURCE $IMAGE_TOCHANGE
           docker push $IMAGE_TOCHANGE
 
-          echo "{IMAGE_TOCHANGE}={ $IMAGE_TOCHANGE }" >> "$GITHUB_OUTPUT"
+          # Set the environment variable for later steps
+          echo "IMAGE_TOCHANGE=${IMAGE_TOCHANGE}" >> $GITHUB_ENV
 
       - name: Debug - Print IMAGE_TOCHANGE in retag-container
-        env:
-          IMAGE_NEW: ${{ steps.retag.outputs.IMAGE_TOCHANGE }}
         run: |
-          echo "DEBUG: IMAGE_TOCHANGE=$IMAGE_NEW"
+          echo "DEBUG: IMAGE_TOCHANGE=${IMAGE_TOCHANGE}"
